--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 
         div > div > span.secondaryText {
             color: #878787;
-            font-size: 1.2em
+            font-size: 1.2em;
             font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
         }
 
@@ -47,6 +47,5 @@
         <span class="secondaryText" th:text="${currentDate}"></span>
     </div>
 </div>
-
 </body>
 </html>
